# codecli

./: .gitignore  README.md  claude-code-agent-study.md  pyproject.toml
.pyagent/: configsample.json
docs/: architecture.md  security-model.md
docs/design/: README.md  intent-ledger.md  memory-policy.md  recommendation-protocol.md  task-planning-state-machine.md  test-intent-map.md
docs/design/adr/: 0001-agent-runtime-loop.md  0002-tool-execution-pipeline.md  0003-read-before-write-edit-policy.md
docs/design/diagrams/: agent-runtime-flow.mmd
pyagent/: README.md  __init__.py  __main__.py  agent.py  cli.py  cli_common.py  cli_plan_task.py  cli_session.py  config.py  context.py  design_trace.py  messages.py  model.py  permissions.py  plan_export.py  plan_parsing.py  plan_schemas.py  plan_store.py  schema_validation.py  storage.py  task_contracts.py  task_formatters.py  task_planning.py  task_policies.py  task_prompts.py  ui.py  verification.py
pyagent/tools/: __init__.py  base.py  bash.py  bash_policy.py  edit_policy.py  executor.py  files.py  git.py  outline.py  project.py  registry.py  scheduler.py  search.py  todo.py
tests/: test_bash_policy.py  test_context_boundary.py  test_design_trace.py  test_plan_task_cli.py  test_security_policy_fixtures.py  test_task_planning.py  test_tools_runtime.py  test_verification_policy.py
tests/fixtures/: bash_policy_cases.json  path_policy_cases.json
